<resources>
    <string name="app_name">Quiz Mobile B</string>
    <string name="fajri_rasid">Fajri Rasid</string>
    <string name="email">Fajrimuhammad460@gmail.com</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="muhammad_fajri_rasid">Muhammad Fajri Rasid</string>
    <string name="luwu_utara_26_februari_2001">Luwu Utara, 26 Februari 2001</string>
    <string name="asal_sekolah">Asal Sekolah</string>
    <string name="sma_negeri_1_luwu_utara">SMA Negeri 1 Luwu Utara</string>
    <string name="tempat_tanggal_lahir"><![CDATA[Tempat & Tanggal Lahir]]></string>
    <string name="exit">exit</string>
    <string name="quiz">Quiz</string>
    <string name="pemrograman_mobile_b">Pemrograman Mobile B</string>
</resources>