<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="@color/accent_color"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Theme.QuizMobileB"
        app:title="Profile"
        app:titleMarginStart="0dp"
        app:titleTextColor="@color/text_and_icon" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_profile"
        android:layout_alignParentBottom="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="176dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_bg"
            tools:ignore="ContentDescription" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginTop="118dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_centerHorizontal="false"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="14dp"
                android:src="@drawable/profile_pic"
                app:civ_border_color="@color/background_color"
                app:civ_border_width="2dp" />

            <LinearLayout
                android:id="@+id/biodata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_image"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:fontFamily="@font/nunito_sans_bold"
                    android:text="@string/muhammad_fajri_rasid"
                    android:textColor="@color/primary_text"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/nunito_sans_semibold"
                    android:text="@string/email"
                    android:textColor="@color/secondary_text"
                    android:textSize="14sp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="20dp"
                    app:cardBackgroundColor="@color/background_color"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="12dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:fontFamily="@font/nunito_sans_bold"
                            android:text="@string/nama_lengkap"
                            android:textColor="@color/secondary_text" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nunito_sans"
                            android:text="@string/muhammad_fajri_rasid"
                            android:textColor="@color/secondary_text"
                            android:textSize="16sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="20dp"
                    app:cardBackgroundColor="@color/background_color"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="12dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:fontFamily="@font/nunito_sans_bold"
                            android:text="@string/tempat_tanggal_lahir"
                            android:textColor="@color/secondary_text" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nunito_sans"
                            android:text="@string/luwu_utara_26_februari_2001"
                            android:textColor="@color/secondary_text"
                            android:textSize="16sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="20dp"
                    app:cardBackgroundColor="@color/background_color"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="12dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:fontFamily="@font/nunito_sans_bold"
                            android:text="@string/asal_sekolah"
                            android:textColor="@color/secondary_text" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nunito_sans"
                            android:text="@string/sma_negeri_1_luwu_utara"
                            android:textColor="@color/secondary_text"
                            android:textSize="16sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_exit"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/biodata"
                android:layout_marginHorizontal="16dp"
                app:elevation="4dp"
                app:icon="@drawable/ic_baseline_power_settings_new_24"
                app:iconGravity="textStart"
                app:strokeColor="@color/accent_color" />

        </RelativeLayout>

    </FrameLayout>

</RelativeLayout>